# access-control-desktop

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile.multistage  README.md  admin.cpp  admin.h  admin.ui  build_appimage.sh  defaultResources.qrc  main.cpp
database/: users
packaging/: access-control-admin.desktop
